# Baron-Engine

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
blueprints/adapters/: README.md
blueprints/core/: README.md
crates/baron-adapters/: Cargo.toml
crates/baron-adapters/src/: install.rs  lib.rs  managed.rs
crates/baron-adapters/tests/: adapter_lifecycle.rs
crates/baron-cli/: Cargo.toml
crates/baron-cli/src/: main.rs
crates/baron-cli/tests/: adapter_cli.rs  automation_cli.rs  autopilot_runtime_cli.rs  capability_cli.rs  certification_cli.rs  cli.rs  context_cli.rs  control_plane_cli.rs  execution_cli.rs  harness_improvement_cli.rs  lifecycle_scripts.rs  memory_cli.rs  migration_cli.rs  release_cli.rs  release_smoke.rs  workflow_contract.rs
crates/baron-core/: Cargo.toml
crates/baron-core/src/: asset_lifecycle.rs  automation.rs  autopilot.rs  capability.rs  certification.rs  config.rs  context.rs  continuity.rs  control_plane.rs  firewall.rs  harness.rs  harness_improvement.rs  identity.rs  lib.rs  memory.rs  migration.rs  plan.rs  proof.rs  release.rs  risk.rs  session.rs  session_replay.rs  survey.rs  trace.rs  vault.rs
crates/baron-core/tests/: asset_lifecycle.rs  automation.rs  autopilot.rs  capability.rs  certification.rs  config.rs  context_compiler.rs  continuity.rs  control_plane.rs  harness.rs  harness_improvement.rs  migration.rs  plan.rs  proof_trace.rs  public_trust_docs.rs  release.rs  runtime_policy.rs  session.rs  session_replay.rs  survey.rs  vault_memory.rs
docs/: BARON_STATUS.json  BARON_STATUS.md  RELEASE.md
docs/architecture/: ADAPTERS.md  ARCHITECTURE.md  CAPABILITY_REGISTRY.md  COMMAND_SURFACE.md  CONTEXT_COMPILER.md  MEMORY_MODEL.md
docs/assessment/: 2026-06-16-baron-2-final-audit.md  (+2 more)
installers/: install.ps1  install.sh
(+94 files in other folders)
