[package]
name = "baron-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
baron-core = { path = "../baron-core" }
baron-adapters = { path = "../baron-adapters" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.10"

[[bin]]
name = "baron"
path = "src/main.rs"
