[package]
name = "baron-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
ignore = "0.4"
regex = "1.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
